--- a/menuEstilo.css
+++ b/menuEstilo.css
@@ -1,7 +1,51 @@
+*
+{
+    padding: 0;
+    margin: 0;
+}
+
+body
+{
+    background-image: url(https://krgames.com.br/medias/slide/big/13/img-2839-min.jpg);
+}
+
 .titulo
 {
     text-align: center;
     justify-content: center;
     align-items: center;
     background-color: red;
+}
+
+.linkClick
+{
+    padding-top: 15%;
+    font-family: "Madimi One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: xx-large;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30vh;
+    color: white;
+}
+
+.linkClick:hover
+{
+    cursor: pointer;
+}
+
+header
+{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 50px;
+    background-color: rgb(0, 0, 0);
+    z-index: 999;
+    border: 3px solid rgb(95, 95, 95);
+    color: white;
+    align-items: center;
+    text-align: center;
 }
