--- a/menuEstilo.css
+++ b/menuEstilo.css
@@ -42,10 +42,18 @@ header
     top: 0;
     width: 100%;
     height: 50px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     z-index: 999;
     border: 3px solid rgb(95, 95, 95);
-    color: white;
+    color: black;
     align-items: center;
     text-align: center;
+    flex-direction: row;
+}
+
+.logo
+{
+    height: 50px;
+    width: 50px;
+    background-color: black;
 }
